--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ keywords = ['minisculus']
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pydantic = "^1.7.3"
 
 [tool.poetry.dev-dependencies]
 hypothesis = "^6.0.2"
@@ -34,6 +35,7 @@ flake8-black = "^0.2.1"
 flake8-import-order = "^0.18.1"
 flake8-bandit = "^2.1.2"
 flake8-docstrings = "^1.5.0"
+flake8-mypy = "^17.8.0"
 darglint = "^1.5.8"
 blackdoc = "^0.3"
 commitizen = "^2.10.0"
