--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,15 @@
 [build-system]
-requires = ["poetry>=1.0.5"]
-build-backend = "poetry.masonry.api"
+requires = [
+    "nox=^2020.12.31",
+    "nox-poetry=^0.7.1",
+    "poetry==^1.1.4"
+]
+build-backend = "nox.__main__:main"
 
 [tool.poetry]
 name = "minisculus"
 version = "0.0.1"
-description = "Geometric Sketching Utility for Python"
+description = "My attempt at the minisculus challenge."
 license = "mit"
 authors = [
     "Richard Vodden <richard@vodden.com>"
@@ -17,32 +21,35 @@ homepage = "https://github.com/rvodden/minisculus"
 keywords = ['minisculus']
 
 [tool.poetry.dependencies]
-python = "^3.8"
 pydantic = "^1.7.3"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-hypothesis = "^6.0.2"
-pytest = "^6.1.1"
-pylint = "^2.6.0"
-flake8 = "^3.7.9"
-coverage = "^5.3"
-mypy = "^0.790"
+auto-behave = "^0.0.7"
+behave = "^1.2.6"
 black = "^20.8b1"
-pytest-cov = "^2.10.1"
-nox = "^2020.8.22"
-pre-commit = "^2.7.1"
-flake8-black = "^0.2.1"
-flake8-import-order = "^0.18.1"
-flake8-bandit = "^2.1.2"
-flake8-docstrings = "^1.5.0"
-flake8-mypy = "^17.8.0"
-darglint = "^1.5.8"
 blackdoc = "^0.3"
 commitizen = "^2.10.0"
-safety = "^1.9.0"
+coverage = "^5.3"
+darglint = "^1.5.8"
+flake8 = "^3.7.9"
+flake8-bandit = "^2.1.2"
+flake8-black = "^0.2.1"
 flake8-bugbear = "^20.11.1"
+flake8-docstrings = "^1.5.0"
+flake8-import-order = "^0.18.1"
+flake8-mypy = "^17.8.0"
+hypothesis = "^6.0.2"
+mypy = "^0.790"
+nox = "^2020.8.22"
+pre-commit = "^2.7.1"
+pylint = "^2.6.0"
+pyhamcrest = "^2.0.2"
+pytest = "^6.1.1"
+pytest-cov = "^2.10.1"
+safety = "^1.9.0"
+sphinxcontrib-mermaid = "^0.5.0"
 typed-ast = "^1.4.1"
-codecov = "^2.1.10"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -52,6 +59,8 @@ junit_duration_report = "call"
 junit_suite_name = "minisculus"
 junit_family = "xunit1"
 addopts = "--doctest-modules"
+log_cli = true
+log_cli_level = "debug"
 
 [tool.coverage.run]
 branch = true
